// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildSkillContent > section-content snapshots > renders deterministic content in consolidated compact mode 1`] = `
"# Obsidian MCP — Tool Usage Guide

## Golden Rules

- ALWAYS vault action: get(path, format: "map") BEFORE any vault action: patch — verify the heading exists first. Never patch a heading you haven't confirmed.
- ALWAYS vault action: get(path, format: "json") BEFORE modifying frontmatter — see the current state.
- Use vault action: search_replace for precise text changes — safer than vault action: put which overwrites the entire file.
- Use batch_get for multiple files — never sequential vault action: get calls.
- Use vault_analysis action: structure at the start of a session to understand the vault layout (note count, links, orphans, most connected).
- NEVER use vault action: put to edit a section — it replaces the ENTIRE file. Use vault action: append, vault action: patch, or vault action: search_replace instead.
- NEVER retry a non-idempotent tool on timeout: vault action: append, vault action: patch, vault action: search_replace, vault action: move, active_file action: append, active_file action: patch, all append/patch periodic note tools.
- NEVER assume a path exists — verify with vault action: list_dir or search type: simple first.

## Common Workflows

### Edit under a heading
1. vault action: get(path, format: "map") — see all headings with :: hierarchy
2. vault action: get(path, format: "markdown") — read current content under target heading
3. vault action: patch(path, content, operation: "append", targetType: "heading", target: "Parent::Child")

If heading has special characters (em dashes, parentheses), use vault action: search_replace instead — PATCH can fail silently on special chars.

### Find and update notes
1. search type: simple(query) — find relevant files by keyword
2. batch_get(paths from results) — read them all in one call
3. vault action: search_replace(path, search, replace) — targeted edit in each file

### Understand vault structure
1. vault_analysis action: structure() — note count, link count, orphans, most connected notes
2. vault_analysis action: backlinks(path) — all notes that link TO this note
3. vault_analysis action: connections(path) — both backlinks AND forward links for a note

### Create a new linked note
1. vault action: put(path, content) — create note (include [[wikilinks]] to other notes)
2. vault_analysis action: refresh() — update the link graph with the new note
3. vault_analysis action: backlinks(path) — verify links were detected

### Move or rename a file (v1.1.0+)
1. vault action: move(source, destination) — copies content + deletes source (wikilinks from other notes are NOT updated automatically)

### Search strategies
- search type: simple(query) — keyword search, fast, good for finding files by content
- search type: dataview(dql) — structured queries on frontmatter: TABLE status, type FROM "folder" WHERE status = "active"
- search type: jsonlogic(query) — JsonLogic for glob/regex patterns
- Dataview only supports TABLE queries, not LIST — this is an API limitation

### Tab control via commands
- open_file(path) — open in current tab
- open_file(path, newLeaf: true) — open in new tab
- commands action: execute("workspace:next-tab") — switch to next tab
- commands action: execute("workspace:previous-tab") — switch to previous tab
- commands action: execute("workspace:goto-tab-1") — jump to specific tab

## Error Recovery

**404 NOT FOUND** — File doesn't exist.
- Try adding .md extension if not present
- Use vault action: list_dir to find the correct path
- Server has case-insensitive fallback — but path must be close

**PATCH 400 error** — Heading/block target not found (returned as a bad request, not a timeout).
- Get the document map first: vault action: get(path, format: "map")
- Check heading uses :: delimiter for nested headings: "Parent::Child"
- If heading has special characters, use vault action: search_replace instead

**Connection refused** — Obsidian might not be running.
- status() to check connection
- Cache-based tools (backlinks, vault_structure, note_connections) still work offline

**CONFLICT (vault action: move)** — Destination already exists.
- Delete destination first, or choose a different path

**Large response truncated** — Note exceeds 500K character limit.
- Use search type: simple to find specific sections instead of reading the whole file
- Use vault action: get with format: "map" to see structure without full content

## Tool Selection Guide

| I want to... | Use this tool |
|---|---|
| Read a file | vault action: get (format: "json" for metadata, "map" for structure) |
| Read multiple files | batch_get (NOT sequential gets) |
| Add to end of file | vault action: append (NOT vault action: put) |
| Edit a specific section | get map first, then vault action: patch or vault action: search_replace |
| Replace entire file | vault action: put (careful — overwrites everything) |
| Find files by keyword | search type: simple |
| Query by frontmatter | search type: dataview with TABLE query |
| Check vault health | vault_analysis action: structure — shows orphans, most connected |
| Who links to this note? | vault_analysis action: backlinks |
| Full link analysis | vault_analysis action: connections (backlinks + forward links) |
| Run an Obsidian command | commands action: list, find ID, then commands action: execute |
| Open file in Obsidian | open_file (newLeaf: true for new tab) |
| Move/rename a file | vault action: move (v1.1.0+) |

## Things That Will Break If You Ignore Them

- vault action: put OVERWRITES the entire file. If you use it to "edit a section" you will destroy all other content. This is the #1 mistake.
- vault action: patch with replace operation on a top-level heading replaces EVERYTHING under it — including all sub-headings.
- PATCH with :: heading delimiter has ~10.5% failure rate under concurrent writes. For concurrent editing, prefer vault action: search_replace.
- Dataview LIST queries are not supported — only TABLE. This is the REST API plugin's limitation.
- Active file operations (active_file) depend on what the USER has open in Obsidian — if they switch files, the active file changes under you.

## Consolidated Mode Action Reference

\`\`\`
vault:
  list           → (no params)
  list_dir       → path (directory)
  get            → path, format?
  put            → path, content
  append         → path, content
  patch          → path, content, operation, targetType, target, createIfMissing?
  delete         → path
  search_replace → path, search, replace
  move           → source, destination

active_file:
  get            → format?
  put            → content
  append         → content
  patch          → content, operation, targetType, target
  delete         → (no params)

commands:
  list           → (no params)
  execute        → commandId

search:
  simple         → query, contextLength?
  jsonlogic      → jsonQuery (object)
  dataview       → query

periodic_note:
  get            → period, year?, month?, day?, format?
  put            → period, content, year?, month?, day?
  append         → period, content, year?, month?, day?
  patch          → period, content, operation, targetType, target, year?, month?, day?
  delete         → period, year?, month?, day?

status:              → (no params)

batch_get:           → paths, format?

recent:
  changes        → limit?
  periodic_notes → period, limit?

configure:
  show           → (no params)
  set            → setting, value
  reset          → setting
  skill          → (no params, returns LLM usage guide)

vault_analysis:
  backlinks      → path
  connections    → path
  structure      → limit?
  refresh        → (no params)
\`\`\`

## Compact Response Field Reference

Responses use abbreviated field names to save tokens:

| Short | Full |
|-------|------|
| c | content |
| fm | frontmatter |
| p | path |
| t | tags |
| s | stat |
| m | mtime (flat, e.g. recent changes) |
| s.m | stat.mtime (nested in stat) |
| s.ct | stat.ctime (nested in stat) |
| s.sz | stat.size (nested in stat) |
| h | headings |
| b | blocks |
| fmf | frontmatterFields |
| q | query |
| ctx | context |
| sc | score |
| mt | matches |
| svc | service |
| auth | authenticated |
| v | versions |
| cnt | count |
| n | notes |
| src | source |
| tgt | target |
| in | inbound |
| out | outbound |
| st | start |
| en | end |
| fn | filename |
"
`;

exports[`buildSkillContent > section-content snapshots > renders deterministic content in consolidated non-compact mode 1`] = `
"# Obsidian MCP — Tool Usage Guide

## Golden Rules

- ALWAYS vault action: get(path, format: "map") BEFORE any vault action: patch — verify the heading exists first. Never patch a heading you haven't confirmed.
- ALWAYS vault action: get(path, format: "json") BEFORE modifying frontmatter — see the current state.
- Use vault action: search_replace for precise text changes — safer than vault action: put which overwrites the entire file.
- Use batch_get for multiple files — never sequential vault action: get calls.
- Use vault_analysis action: structure at the start of a session to understand the vault layout (note count, links, orphans, most connected).
- NEVER use vault action: put to edit a section — it replaces the ENTIRE file. Use vault action: append, vault action: patch, or vault action: search_replace instead.
- NEVER retry a non-idempotent tool on timeout: vault action: append, vault action: patch, vault action: search_replace, vault action: move, active_file action: append, active_file action: patch, all append/patch periodic note tools.
- NEVER assume a path exists — verify with vault action: list_dir or search type: simple first.

## Common Workflows

### Edit under a heading
1. vault action: get(path, format: "map") — see all headings with :: hierarchy
2. vault action: get(path, format: "markdown") — read current content under target heading
3. vault action: patch(path, content, operation: "append", targetType: "heading", target: "Parent::Child")

If heading has special characters (em dashes, parentheses), use vault action: search_replace instead — PATCH can fail silently on special chars.

### Find and update notes
1. search type: simple(query) — find relevant files by keyword
2. batch_get(paths from results) — read them all in one call
3. vault action: search_replace(path, search, replace) — targeted edit in each file

### Understand vault structure
1. vault_analysis action: structure() — note count, link count, orphans, most connected notes
2. vault_analysis action: backlinks(path) — all notes that link TO this note
3. vault_analysis action: connections(path) — both backlinks AND forward links for a note

### Create a new linked note
1. vault action: put(path, content) — create note (include [[wikilinks]] to other notes)
2. vault_analysis action: refresh() — update the link graph with the new note
3. vault_analysis action: backlinks(path) — verify links were detected

### Move or rename a file (v1.1.0+)
1. vault action: move(source, destination) — copies content + deletes source (wikilinks from other notes are NOT updated automatically)

### Search strategies
- search type: simple(query) — keyword search, fast, good for finding files by content
- search type: dataview(dql) — structured queries on frontmatter: TABLE status, type FROM "folder" WHERE status = "active"
- search type: jsonlogic(query) — JsonLogic for glob/regex patterns
- Dataview only supports TABLE queries, not LIST — this is an API limitation

### Tab control via commands
- open_file(path) — open in current tab
- open_file(path, newLeaf: true) — open in new tab
- commands action: execute("workspace:next-tab") — switch to next tab
- commands action: execute("workspace:previous-tab") — switch to previous tab
- commands action: execute("workspace:goto-tab-1") — jump to specific tab

## Error Recovery

**404 NOT FOUND** — File doesn't exist.
- Try adding .md extension if not present
- Use vault action: list_dir to find the correct path
- Server has case-insensitive fallback — but path must be close

**PATCH 400 error** — Heading/block target not found (returned as a bad request, not a timeout).
- Get the document map first: vault action: get(path, format: "map")
- Check heading uses :: delimiter for nested headings: "Parent::Child"
- If heading has special characters, use vault action: search_replace instead

**Connection refused** — Obsidian might not be running.
- status() to check connection
- Cache-based tools (backlinks, vault_structure, note_connections) still work offline

**CONFLICT (vault action: move)** — Destination already exists.
- Delete destination first, or choose a different path

**Large response truncated** — Note exceeds 500K character limit.
- Use search type: simple to find specific sections instead of reading the whole file
- Use vault action: get with format: "map" to see structure without full content

## Tool Selection Guide

| I want to... | Use this tool |
|---|---|
| Read a file | vault action: get (format: "json" for metadata, "map" for structure) |
| Read multiple files | batch_get (NOT sequential gets) |
| Add to end of file | vault action: append (NOT vault action: put) |
| Edit a specific section | get map first, then vault action: patch or vault action: search_replace |
| Replace entire file | vault action: put (careful — overwrites everything) |
| Find files by keyword | search type: simple |
| Query by frontmatter | search type: dataview with TABLE query |
| Check vault health | vault_analysis action: structure — shows orphans, most connected |
| Who links to this note? | vault_analysis action: backlinks |
| Full link analysis | vault_analysis action: connections (backlinks + forward links) |
| Run an Obsidian command | commands action: list, find ID, then commands action: execute |
| Open file in Obsidian | open_file (newLeaf: true for new tab) |
| Move/rename a file | vault action: move (v1.1.0+) |

## Things That Will Break If You Ignore Them

- vault action: put OVERWRITES the entire file. If you use it to "edit a section" you will destroy all other content. This is the #1 mistake.
- vault action: patch with replace operation on a top-level heading replaces EVERYTHING under it — including all sub-headings.
- PATCH with :: heading delimiter has ~10.5% failure rate under concurrent writes. For concurrent editing, prefer vault action: search_replace.
- Dataview LIST queries are not supported — only TABLE. This is the REST API plugin's limitation.
- Active file operations (active_file) depend on what the USER has open in Obsidian — if they switch files, the active file changes under you.

## Consolidated Mode Action Reference

\`\`\`
vault:
  list           → (no params)
  list_dir       → path (directory)
  get            → path, format?
  put            → path, content
  append         → path, content
  patch          → path, content, operation, targetType, target, createIfMissing?
  delete         → path
  search_replace → path, search, replace
  move           → source, destination

active_file:
  get            → format?
  put            → content
  append         → content
  patch          → content, operation, targetType, target
  delete         → (no params)

commands:
  list           → (no params)
  execute        → commandId

search:
  simple         → query, contextLength?
  jsonlogic      → jsonQuery (object)
  dataview       → query

periodic_note:
  get            → period, year?, month?, day?, format?
  put            → period, content, year?, month?, day?
  append         → period, content, year?, month?, day?
  patch          → period, content, operation, targetType, target, year?, month?, day?
  delete         → period, year?, month?, day?

status:              → (no params)

batch_get:           → paths, format?

recent:
  changes        → limit?
  periodic_notes → period, limit?

configure:
  show           → (no params)
  set            → setting, value
  reset          → setting
  skill          → (no params, returns LLM usage guide)

vault_analysis:
  backlinks      → path
  connections    → path
  structure      → limit?
  refresh        → (no params)
\`\`\`
"
`;

exports[`buildSkillContent > section-content snapshots > renders deterministic content in granular compact mode 1`] = `
"# Obsidian MCP — Tool Usage Guide

## Golden Rules

- ALWAYS get_file_contents(path, format: "map") BEFORE any patch_content — verify the heading exists first. Never patch a heading you haven't confirmed.
- ALWAYS get_file_contents(path, format: "json") BEFORE modifying frontmatter — see the current state.
- Use search_replace for precise text changes — safer than put_content which overwrites the entire file.
- Use batch_get_file_contents for multiple files — never sequential get_file_contents calls.
- Use get_vault_structure at the start of a session to understand the vault layout (note count, links, orphans, most connected).
- NEVER use put_content to edit a section — it replaces the ENTIRE file. Use append_content, patch_content, or search_replace instead.
- NEVER retry a non-idempotent tool on timeout: append_content, patch_content, search_replace, move_file, append_active_file, patch_active_file, all append/patch periodic note tools.
- NEVER assume a path exists — verify with list_files_in_dir or simple_search first.

## Common Workflows

### Edit under a heading
1. get_file_contents(path, format: "map") — see all headings with :: hierarchy
2. get_file_contents(path, format: "markdown") — read current content under target heading
3. patch_content(path, content, operation: "append", targetType: "heading", target: "Parent::Child")

If heading has special characters (em dashes, parentheses), use search_replace instead — PATCH can fail silently on special chars.

### Find and update notes
1. simple_search(query) — find relevant files by keyword
2. batch_get_file_contents(paths from results) — read them all in one call
3. search_replace(path, search, replace) — targeted edit in each file

### Understand vault structure
1. get_vault_structure() — note count, link count, orphans, most connected notes
2. get_backlinks(path) — all notes that link TO this note
3. get_note_connections(path) — both backlinks AND forward links for a note

### Create a new linked note
1. put_content(path, content) — create note (include [[wikilinks]] to other notes)
2. refresh_cache() — update the link graph with the new note
3. get_backlinks(path) — verify links were detected

### Move or rename a file (v1.1.0+)
1. move_file(source, destination) — copies content + deletes source (wikilinks from other notes are NOT updated automatically)

### Search strategies
- simple_search(query) — keyword search, fast, good for finding files by content
- dataview_search(dql) — structured queries on frontmatter: TABLE status, type FROM "folder" WHERE status = "active"
- complex_search(query) — JsonLogic for glob/regex patterns
- Dataview only supports TABLE queries, not LIST — this is an API limitation

### Tab control via commands
- open_file(path) — open in current tab
- open_file(path, newLeaf: true) — open in new tab
- execute_command("workspace:next-tab") — switch to next tab
- execute_command("workspace:previous-tab") — switch to previous tab
- execute_command("workspace:goto-tab-1") — jump to specific tab

## Error Recovery

**404 NOT FOUND** — File doesn't exist.
- Try adding .md extension if not present
- Use list_files_in_dir to find the correct path
- Server has case-insensitive fallback — but path must be close

**PATCH 400 error** — Heading/block target not found (returned as a bad request, not a timeout).
- Get the document map first: get_file_contents(path, format: "map")
- Check heading uses :: delimiter for nested headings: "Parent::Child"
- If heading has special characters, use search_replace instead

**Connection refused** — Obsidian might not be running.
- get_server_status() to check connection
- Cache-based tools (backlinks, vault_structure, note_connections) still work offline

**CONFLICT (move_file)** — Destination already exists.
- Delete destination first, or choose a different path

**Large response truncated** — Note exceeds 500K character limit.
- Use simple_search to find specific sections instead of reading the whole file
- Use get_file_contents with format: "map" to see structure without full content

## Tool Selection Guide

| I want to... | Use this tool |
|---|---|
| Read a file | get_file_contents (format: "json" for metadata, "map" for structure) |
| Read multiple files | batch_get_file_contents (NOT sequential gets) |
| Add to end of file | append_content (NOT put_content) |
| Edit a specific section | get map first, then patch_content or search_replace |
| Replace entire file | put_content (careful — overwrites everything) |
| Find files by keyword | simple_search |
| Query by frontmatter | dataview_search with TABLE query |
| Check vault health | get_vault_structure — shows orphans, most connected |
| Who links to this note? | get_backlinks |
| Full link analysis | get_note_connections (backlinks + forward links) |
| Run an Obsidian command | list_commands, find ID, then execute_command |
| Open file in Obsidian | open_file (newLeaf: true for new tab) |
| Move/rename a file | move_file (v1.1.0+) |

## Things That Will Break If You Ignore Them

- put_content OVERWRITES the entire file. If you use it to "edit a section" you will destroy all other content. This is the #1 mistake.
- patch_content with replace operation on a top-level heading replaces EVERYTHING under it — including all sub-headings.
- PATCH with :: heading delimiter has ~10.5% failure rate under concurrent writes. For concurrent editing, prefer search_replace.
- Dataview LIST queries are not supported — only TABLE. This is the REST API plugin's limitation.
- Active file operations (get_active_file, put_active_file, etc.) depend on what the USER has open in Obsidian — if they switch files, the active file changes under you.

## Compact Response Field Reference

Responses use abbreviated field names to save tokens:

| Short | Full |
|-------|------|
| c | content |
| fm | frontmatter |
| p | path |
| t | tags |
| s | stat |
| m | mtime (flat, e.g. recent changes) |
| s.m | stat.mtime (nested in stat) |
| s.ct | stat.ctime (nested in stat) |
| s.sz | stat.size (nested in stat) |
| h | headings |
| b | blocks |
| fmf | frontmatterFields |
| q | query |
| ctx | context |
| sc | score |
| mt | matches |
| svc | service |
| auth | authenticated |
| v | versions |
| cnt | count |
| n | notes |
| src | source |
| tgt | target |
| in | inbound |
| out | outbound |
| st | start |
| en | end |
| fn | filename |
"
`;

exports[`buildSkillContent > section-content snapshots > renders deterministic content in granular non-compact mode 1`] = `
"# Obsidian MCP — Tool Usage Guide

## Golden Rules

- ALWAYS get_file_contents(path, format: "map") BEFORE any patch_content — verify the heading exists first. Never patch a heading you haven't confirmed.
- ALWAYS get_file_contents(path, format: "json") BEFORE modifying frontmatter — see the current state.
- Use search_replace for precise text changes — safer than put_content which overwrites the entire file.
- Use batch_get_file_contents for multiple files — never sequential get_file_contents calls.
- Use get_vault_structure at the start of a session to understand the vault layout (note count, links, orphans, most connected).
- NEVER use put_content to edit a section — it replaces the ENTIRE file. Use append_content, patch_content, or search_replace instead.
- NEVER retry a non-idempotent tool on timeout: append_content, patch_content, search_replace, move_file, append_active_file, patch_active_file, all append/patch periodic note tools.
- NEVER assume a path exists — verify with list_files_in_dir or simple_search first.

## Common Workflows

### Edit under a heading
1. get_file_contents(path, format: "map") — see all headings with :: hierarchy
2. get_file_contents(path, format: "markdown") — read current content under target heading
3. patch_content(path, content, operation: "append", targetType: "heading", target: "Parent::Child")

If heading has special characters (em dashes, parentheses), use search_replace instead — PATCH can fail silently on special chars.

### Find and update notes
1. simple_search(query) — find relevant files by keyword
2. batch_get_file_contents(paths from results) — read them all in one call
3. search_replace(path, search, replace) — targeted edit in each file

### Understand vault structure
1. get_vault_structure() — note count, link count, orphans, most connected notes
2. get_backlinks(path) — all notes that link TO this note
3. get_note_connections(path) — both backlinks AND forward links for a note

### Create a new linked note
1. put_content(path, content) — create note (include [[wikilinks]] to other notes)
2. refresh_cache() — update the link graph with the new note
3. get_backlinks(path) — verify links were detected

### Move or rename a file (v1.1.0+)
1. move_file(source, destination) — copies content + deletes source (wikilinks from other notes are NOT updated automatically)

### Search strategies
- simple_search(query) — keyword search, fast, good for finding files by content
- dataview_search(dql) — structured queries on frontmatter: TABLE status, type FROM "folder" WHERE status = "active"
- complex_search(query) — JsonLogic for glob/regex patterns
- Dataview only supports TABLE queries, not LIST — this is an API limitation

### Tab control via commands
- open_file(path) — open in current tab
- open_file(path, newLeaf: true) — open in new tab
- execute_command("workspace:next-tab") — switch to next tab
- execute_command("workspace:previous-tab") — switch to previous tab
- execute_command("workspace:goto-tab-1") — jump to specific tab

## Error Recovery

**404 NOT FOUND** — File doesn't exist.
- Try adding .md extension if not present
- Use list_files_in_dir to find the correct path
- Server has case-insensitive fallback — but path must be close

**PATCH 400 error** — Heading/block target not found (returned as a bad request, not a timeout).
- Get the document map first: get_file_contents(path, format: "map")
- Check heading uses :: delimiter for nested headings: "Parent::Child"
- If heading has special characters, use search_replace instead

**Connection refused** — Obsidian might not be running.
- get_server_status() to check connection
- Cache-based tools (backlinks, vault_structure, note_connections) still work offline

**CONFLICT (move_file)** — Destination already exists.
- Delete destination first, or choose a different path

**Large response truncated** — Note exceeds 500K character limit.
- Use simple_search to find specific sections instead of reading the whole file
- Use get_file_contents with format: "map" to see structure without full content

## Tool Selection Guide

| I want to... | Use this tool |
|---|---|
| Read a file | get_file_contents (format: "json" for metadata, "map" for structure) |
| Read multiple files | batch_get_file_contents (NOT sequential gets) |
| Add to end of file | append_content (NOT put_content) |
| Edit a specific section | get map first, then patch_content or search_replace |
| Replace entire file | put_content (careful — overwrites everything) |
| Find files by keyword | simple_search |
| Query by frontmatter | dataview_search with TABLE query |
| Check vault health | get_vault_structure — shows orphans, most connected |
| Who links to this note? | get_backlinks |
| Full link analysis | get_note_connections (backlinks + forward links) |
| Run an Obsidian command | list_commands, find ID, then execute_command |
| Open file in Obsidian | open_file (newLeaf: true for new tab) |
| Move/rename a file | move_file (v1.1.0+) |

## Things That Will Break If You Ignore Them

- put_content OVERWRITES the entire file. If you use it to "edit a section" you will destroy all other content. This is the #1 mistake.
- patch_content with replace operation on a top-level heading replaces EVERYTHING under it — including all sub-headings.
- PATCH with :: heading delimiter has ~10.5% failure rate under concurrent writes. For concurrent editing, prefer search_replace.
- Dataview LIST queries are not supported — only TABLE. This is the REST API plugin's limitation.
- Active file operations (get_active_file, put_active_file, etc.) depend on what the USER has open in Obsidian — if they switch files, the active file changes under you.
"
`;
